--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin>
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -32,10 +33,10 @@
           <li class="main-menu__item">
             <a class="main-menu__link" href="index.html">Главная</a>
           </li>
-          <li class="main-menu_item">
+          <li class="main-menu__item">
             <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-menu_item">
+          <li class="main-menu__item">
             <a class="main-menu__link main-menu__link--active">Подбор программы</a>
           </li>
         </ul>
@@ -45,7 +46,7 @@
   <main class="page-main">
     <form class="page-main__form form" action="https://echo.htmlacademy.ru" method="POST">
       <h2 class="form__title form__container">Подбор программы</h2>
-      <p class="form__content form__container">Заполните анкету и мы подберем<br>программу питания для вашего кота</p>
+      <p class="form__content form__container">Заполните анкету и мы подберем программу питания для вашего кота</p>
       <div class="form__list-wrapper">
         <ul class="form__list form__container">
           <li class="form__item">
@@ -142,8 +143,8 @@
     <section class="contacts">
       <h2 class="visually-hidden">Наше месторасположение на карте</h2>
       <div class="contacts__container">
-        <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
+        <p class="contacts__item">приглашаем к сотрудничеству дилеров!</p>
+        <address class="contacts__address">ул. Большая Конюшенная, д. 19/8<br> Санкт-Петербург</address>
       </div>
       <div class="contacts__map"></div>
     </section>
@@ -182,9 +183,8 @@
               <svg class="social__svg social__svg--insta" width="17" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
                 <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
                   M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z" />
-                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
-                 s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
-                <circle class="st0" cx="12.3" cy="3.7" r="0.9" />
+                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+                <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
               </svg>
             </a>
           </li>
@@ -192,9 +192,7 @@
             <a class="social__link social__link--fb" href="#">
               <span class="visually-hidden">Фейсбук</span>
               <svg class="social__svg social__svg--fb" width="11" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
-                <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
-                 h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
-                 z" />
+                <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18z"/>
               </svg>
             </a>
           </li>
