--- a/source/form.html
+++ b/source/form.html
@@ -8,8 +8,11 @@
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin>
   <link href="css/style.min.css" rel="stylesheet">
-  <script src="js/picturefill.min.js"></script>
-</head>
+  <script>
+      // Picture element HTML5 shiv
+      document.createElement( "picture" );
+    </script>
+  </head>
 
 <body>
 
@@ -66,11 +69,11 @@
         <div class="form__list-border-wrapper">
           <ul class="form__list form__list--mass form__container">
             <li class="form__item">
-              <input class="form__input-radio visually-hidden" type="radio" id="form-thin" name="mass" value="mass-down" checked>
+              <input class="form__input-radio visually-hidden" type="radio" id="form-thin" name="mass" value="mass-down" disabled>
               <label class="form__label form__label--radio" for="form-thin">Похудение</label>
             </li>
             <li class="form__item">
-              <input class="form__input-radio visually-hidden" type="radio" id="form-thick" name="mass" value="mass-up">
+              <input class="form__input-radio visually-hidden" type="radio" id="form-thick" name="mass" value="mass-up" checked>
               <label class="form__label form__label--radio" for="form-thick">Набор массы</label>
             </li>
             <li class="form__item">
@@ -118,7 +121,7 @@
               <label class="form__label form__label--checkbox" for="form-sweetener">Сахарозаменитель</label>
             </li>
             <li class="form__item">
-              <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-drinkwater" name="drinkwater">
+              <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-drinkwater" name="drinkwater" disabled>
               <label class="form__label form__label--checkbox" for="form-drinkwater">Питьевая вода</label>
             </li>
             <li class="form__item">
