--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,10 @@
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin>
   <link href="css/style.min.css" rel="stylesheet">
-  <script src="js/picturefill.min.js"></script>
+  <script>
+      // Picture element HTML5 shiv
+      document.createElement( "picture" );
+    </script>
 </head>
 
 <body>
