--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,9 +9,10 @@
   <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin>
   <link href="css/style.min.css" rel="stylesheet">
   <script>
-      // Picture element HTML5 shiv
-      document.createElement( "picture" );
-    </script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="picturefill.js" async></script>
 </head>
 
 <body>
