--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
     // Picture element HTML5 shiv
     document.createElement( "picture" );
   </script>
-  <script src="picturefill.js" async></script>
+  <script src="js/picturefill.min.js" async></script>
 </head>
 
 <body>
